# frugalityscore

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup_other.py
doc/: README.md  classification.py  environment.yml  experiment.yml  plot_scores.py
doc/data/: buttere.csv  cifar100.csv  example.csv  imagenet.csv  mnist.csv
doc/tracking/: README.md  simulation_metrics_exec.sh
doc/tracking/config/: README.md  get_metrics.sh  grafana_dashboard_template.json
doc/tracking/config/tig/: docker-compose.yml
doc/tracking/config/tig/telegraf/: telegraf.conf
doc/tracking/experiments/conso/: analyse_stats.py  get_conso.py  get_stats.py  query_influx.sh  simulation_metrics_exec.sh  stats_summary.py  stats_summary_deep.py
doc/tracking/experiments/frugalscenarii/: classif_scenarii.py  get_perf.py  get_scores.py  param_classif_cifar100.yml  param_classif_imagenet.yml  param_classif_mnist.yml  read_event.py  read_events.py  simulation_metrics_exec.sh
doc/webapp/: index.html
src/data/: CPUs.csv  GPUs.csv  referencePerformance.json
src/frugalityscore/: __init__.py  defuzz.py  membership.py  system.py  variable.py
tests/: test.ipynb
